Added install script to install additional fonts

--- a/Dockerfile.ubuntu.icewm.vnc
+++ b/Dockerfile.ubuntu.icewm.vnc
@@ -41,6 +41,9 @@ RUN find $INST_SCRIPTS -name '*.sh' -exec chmod a+x {} +
 RUN $INST_SCRIPTS/tools.sh
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
+### Install custom fonts
+RUN $INST_SCRIPTS/install_custom_fonts.sh
+
 ### Install xvnc-server & noVNC - HTML5 based VNC viewer
 RUN $INST_SCRIPTS/tigervnc.sh
 RUN $INST_SCRIPTS/no_vnc.sh
