--- a/Dockerfile.ubuntu.icewm.vnc
+++ b/Dockerfile.ubuntu.icewm.vnc
@@ -2,8 +2,8 @@
 
 FROM ubuntu:16.04
 
-MAINTAINER Tobias Schneck "tobias.schneck@consol.de"
-ENV REFRESHED_AT 2018-03-27
+MAINTAINER Simon Hofmann "simon.hofmann@consol.de"
+ENV REFRESHED_AT 2018-10-29
 
 LABEL io.k8s.description="Headless VNC Container with IceWM window manager, firefox and chromium" \
       io.k8s.display-name="Headless VNC Container based on Ubuntu" \
