--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -1,8 +1,6 @@
 # This Dockerfile is used to build an headles vnc image based on Centos
 
-FROM centos:7
-
-MAINTAINER Simon Hofmann "simon.hofmann@consol.de"
+FROM tmatsuo/centos:7
 ENV REFRESHED_AT 2018-10-29
 
 LABEL io.k8s.description="Headless VNC Container with Xfce window manager, firefox and chromium" \
