--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -36,7 +36,9 @@ RUN find $INST_SCRIPTS -name '*.sh' -exec chmod a+x {} +
 
 ### Install some common tools
 RUN $INST_SCRIPTS/tools.sh
-ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
+RUN localedef -f UTF-8 -i ja_JP ja_JP.UTF-8
+ENV LANG='ja_JP.utf8' LANGUAGE='ja_JP:ja' LC_ALL='ja_JP.UTF-8'
+RUN yum install -y ibus-kkc
 
 ### Install xvnc-server & noVNC - HTML5 based VNC viewer
 RUN $INST_SCRIPTS/tigervnc.sh
@@ -56,6 +58,13 @@ ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 
 USER 1000
+
+#For Japanese
+RUN yum install -y ipa-*-fonts
+RUN mkdir -p $HOME/.config/dconf
+COPY ./src/dconf_user $HOME/.config/dconf/user
+RUN rm -f /dockerstartup/vnc_startup.sh
+COPY ./src/common/scripts/vnc_startup.sh /dockerstartup/vnc_startup.sh
 
 ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
 CMD ["--wait"]
