--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -58,6 +58,13 @@ RUN $INST_SCRIPTS/libnss_wrapper.sh
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 
+## use supervisor and butterfly
+RUN yum install -y python2-pip.noarch python-tornado.x86_64 supervisor && \
+    pip install butterfly
+RUN echo -e "## CentOS 7 Web Console ##\n\n" > /etc/motd && \
+    sed -i "s/nodaemon=false/nodaemon=true/g" /etc/supervisord.conf
+COPY ./src/butterfly.ini /etc/supervisord.d/
+
 #For Japanese
 RUN yum install -y ipa-*-fonts
 RUN mkdir -p $HOME/.config/dconf
@@ -69,6 +76,11 @@ COPY ./src/common/scripts/vnc_startup.sh /dockerstartup/vnc_startup.sh
 RUN mkdir -p $HOME/.config/xfce4/xfconf/xfce-perchannel-xml
 COPY ./src/xfce4-panel.xml $HOME/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml
 
+COPY ./src/novnc.ini /etc/supervisord.d/
+
+COPY ./src/docker-entrypoint.sh /
 USER 1000
-ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
-CMD ["--wait"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
+#ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
+#CMD ["--wait"]
