--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -67,14 +67,11 @@ COPY ./src/common/supervisor/butterfly.ini /etc/supervisord.d/
 
 #For Japanese
 RUN yum install -y ipa-*-fonts
-RUN mkdir -p $HOME/.config/dconf
-COPY ./src/common/xfce/dconf_user $HOME/.config/dconf/user
 RUN rm -f /dockerstartup/vnc_startup.sh
 COPY ./src/common/scripts/vnc_startup.sh /dockerstartup/vnc_startup.sh
 
 ## show clock in panel to update dispay every 1s. (keep tcp connection)
-RUN mkdir -p $HOME/.config/xfce4/xfconf/xfce-perchannel-xml
-COPY ./src/common/xfce/xfce4-panel.xml $HOME/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml
+COPY ./src/common/xfce/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml $HOME/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml
 
 COPY ./src/common/supervisor/novnc.ini /etc/supervisord.d/
 
