--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -44,36 +44,46 @@ RUN yum install -y ibus-kkc
 RUN $INST_SCRIPTS/tigervnc.sh
 RUN $INST_SCRIPTS/no_vnc.sh
 
+### Install startup
+RUN $INST_SCRIPTS/libnss_wrapper.sh
+
+### Install Japanese fonts
+RUN yum install -y ipa-*-fonts
+
+### Install supervisor and butterfly
+RUN yum install -y python2-pip.noarch python-tornado.x86_64 supervisor && \
+    pip install butterfly
+
 ### Install firefox and chrome browser
 #RUN $INST_SCRIPTS/firefox.sh
 RUN yum install -y firefox
 RUN $INST_SCRIPTS/chrome.sh
 
+### configure startup
+ADD ./src/common/scripts $STARTUPDIR
+
 ### Install xfce UI
 RUN $INST_SCRIPTS/xfce_ui.sh
-ADD ./src/common/xfce/ $HOME/
 
-### configure startup
-RUN $INST_SCRIPTS/libnss_wrapper.sh
-ADD ./src/common/scripts $STARTUPDIR
-RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
-
-## use supervisor and butterfly
-RUN yum install -y python2-pip.noarch python-tornado.x86_64 supervisor && \
-    pip install butterfly
+### Setup supervisor and butterfly
 RUN echo -e "## CentOS 7 Web Console ##\n\n" > /etc/motd && \
     sed -i "s/nodaemon=false/nodaemon=true/g" /etc/supervisord.conf
 COPY ./src/common/supervisor/butterfly.ini /etc/supervisord.d/
 
-#For Japanese
-RUN yum install -y ipa-*-fonts
+### Setup Japanese input method
 RUN rm -f /dockerstartup/vnc_startup.sh
 COPY ./src/common/scripts/vnc_startup.sh /dockerstartup/vnc_startup.sh
+
+### Install  xfce settings
+ADD ./src/common/xfce/ $HOME/
 
 ## show clock in panel to update dispay every 1s. (keep tcp connection)
 COPY ./src/common/xfce/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml $HOME/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml
 
 COPY ./src/common/supervisor/novnc.ini /etc/supervisord.d/
+
+### change permissions
+RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 
 COPY ./src/common/supervisor/docker-entrypoint.sh /
 USER 0
