--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -25,7 +25,7 @@ ENV HOME=/root \
     NO_VNC_HOME=/headless/noVNC \
     VNC_COL_DEPTH=24 \
     VNC_RESOLUTION=1280x1024 \
-    VNC_PW=vncpassword \
+    PASSWORD=password \
     VNC_VIEW_ONLY=false
 WORKDIR $HOME
 
