--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -13,9 +13,8 @@ LABEL io.k8s.description="Headless VNC Container with Xfce window manager, firef
 # VNC port:5901
 # noVNC webport, connect via http://IP:6901/?password=vncpassword
 ENV DISPLAY=:1 \
-    VNC_PORT=5901 \
-    NO_VNC_PORT=6901
-EXPOSE $VNC_PORT $NO_VNC_PORT
+    VNC_PORT=5901
+EXPOSE $VNC_PORT 6901 57575
 
 ### Envrionment config
 ENV HOME=/root \
@@ -47,23 +46,19 @@ RUN $INST_SCRIPTS/no_vnc.sh
 ### Install startup
 RUN $INST_SCRIPTS/libnss_wrapper.sh
 
-### Install Japanese fonts
-RUN yum install -y ipa-*-fonts
-
-### Install supervisor and butterfly
-RUN yum install -y python2-pip.noarch python-tornado.x86_64 supervisor && \
+### Install Japanese fonts, supervisor and butterfly, firefox, X tool
+RUN yum install -y ipa-*-fonts python2-pip.noarch python-tornado.x86_64 supervisor firefox xorg-x11-server-Xorg && \
     pip install butterfly
 
-### Install firefox and chrome browser
-#RUN $INST_SCRIPTS/firefox.sh
-RUN yum install -y firefox
+### Install Chrome browser
 RUN $INST_SCRIPTS/chrome.sh
 
 ### Install xfce UI
 RUN $INST_SCRIPTS/xfce_ui.sh
 
-### Install X tool
-RUN yum install -y xorg-x11-server-Xorg
+### Install traefik
+COPY ./src/common/traefik/traefik /usr/local/bin/
+COPY ./src/common/traefik/traefik.toml /etc/
 
 ### Setup supervisor and butterfly
 RUN echo -e "## CentOS 7 Web Console ##\n\n" > /etc/motd && \
@@ -84,6 +79,7 @@ COPY ./src/common/xfce/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml 
 ### start novnc and butterfly using supervisor
 COPY ./src/common/supervisor/butterfly.ini /etc/supervisord.d/
 COPY ./src/common/supervisor/novnc.ini /etc/supervisord.d/
+COPY ./src/common/supervisor/traefik.ini /etc/supervisord.d/
 
 ### configure startup
 ADD ./src/common/scripts $STARTUPDIR
@@ -94,5 +90,3 @@ COPY ./src/common/supervisor/docker-entrypoint.sh /
 USER 0
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
-#ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
-#CMD ["--wait"]
