--- a/src/common/supervisor/traefik.ini
+++ b/src/common/supervisor/traefik.ini
@@ -1,5 +1,5 @@
 [program:traefik]
-command=/usr/local/bin/traefik -c /etc/traefik.toml --debug
+command=/usr/local/bin/traefik -c /etc/traefik.toml --checknewversion=false --debug
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
