--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -33,6 +33,7 @@ ADD ./src/common/install/ $INST_SCRIPTS/
 ADD ./src/centos/install/ $INST_SCRIPTS/
 RUN find $INST_SCRIPTS -name '*.sh' -exec chmod a+x {} +
 
+
 ### Install some common tools
 RUN $INST_SCRIPTS/tools.sh
 RUN localedef -f UTF-8 -i ja_JP ja_JP.UTF-8
@@ -85,6 +86,9 @@ COPY ./src/common/supervisor/traefik.ini /etc/supervisord.d/
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 RUN echo 'echo -e "\n################################################\nPlease change vnc and user password.\nUse \"vncpasswd\" command to change vnc password.\n################################################\n"' >> $HOME/.bashrc
+
+### replace vnc.html to prevent closing window ###
+COPY ./src/common/novnc/vnc.html $NO_VNC_HOME/vnc.html
 
 COPY ./src/common/supervisor/docker-entrypoint.sh /
 USER 0
