--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -1,20 +1,19 @@
 # This Dockerfile is used to build an headles vnc image based on Centos
 
 FROM tmatsuo/centos:7
-ENV REFRESHED_AT 2018-10-29
+ENV REFRESHED_AT 2020-08-11
 
-LABEL io.k8s.description="Headless VNC Container with Xfce window manager, firefox and chromium" \
-      io.k8s.display-name="Headless VNC Container based on Centos" \
-      io.openshift.expose-services="6901:http,5901:xvnc" \
-      io.openshift.tags="vnc, centos, xfce" \
-      io.openshift.non-scalable=true
+LABEL io.k8s.description="Web based VNC and Terminal Container with Xfce on CentOS" \
+      io.k8s.display-name="VNC and Terminal on CentOS" \
+      io.openshift.expose-services="8080:http" \
+      io.openshift.tags="vnc, terminal, centos, xfce" \
+      io.openshift.non-scalable=true \
+      maintainer="matsuo.tak@gmail.com"
 
-## Connection ports for controlling the UI:
-# VNC port:5901
-# noVNC webport, connect via http://IP:6901/?password=vncpassword
-ENV DISPLAY=:1 \
-    VNC_PORT=5901
-EXPOSE $VNC_PORT 6901 57575
+# Default http port is 8080
+# VNC : http://IP:8080/desktop/
+# Terminal : http://IP:8080/term/
+EXPOSE 8080
 
 ### Envrionment config
 ENV HOME=/root \
@@ -25,7 +24,10 @@ ENV HOME=/root \
     VNC_COL_DEPTH=24 \
     VNC_RESOLUTION=1800x850 \
     PASSWORD=password \
-    VNC_VIEW_ONLY=false
+    VNC_VIEW_ONLY=false \
+    DISPLAY=:1 \
+    VNC_PORT=5901
+
 WORKDIR $HOME
 
 ### Add all install scripts for further steps
