--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -49,8 +49,8 @@ RUN $INST_SCRIPTS/no_vnc.sh
 ### Install startup
 RUN $INST_SCRIPTS/libnss_wrapper.sh
 
-### Install Japanese fonts, supervisor, nginx and butterfly, firefox, X tool
-RUN yum install -y ipa-*-fonts python2-pip.noarch python-tornado.x86_64 supervisor firefox xorg-x11-server-Xorg nginx && \
+### Install Japanese fonts, supervisor, nginx and butterfly, firefox, X tool, and so on
+RUN yum install -y ipa-*-fonts python2-pip.noarch python-tornado.x86_64 supervisor firefox xorg-x11-server-Xorg nginx psmisc && \
     pip install butterfly
 
 ### Install Chrome browser
