--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -100,7 +100,7 @@ COPY ./src/common/supervisor/nginx.ini /etc/supervisord.d/
 ### configure startup
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
-RUN echo 'echo -e "\n################################################\nPlease change vnc and user password.\nUse \"vncpasswd\" command to change vnc password.\n################################################\n"' >> $HOME/.bashrc
+RUN echo 'echo -e "\n################################################\nPlease change root password using passwd command.\n################################################\n"' >> $HOME/.bashrc
 
 ### replace vnc.html to prevent closing window ###
 COPY ./src/common/novnc/vnc.html $NO_VNC_HOME/vnc.html
