--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -65,6 +65,7 @@ COPY ./src/common/nginx/nginx.conf.tmpl /etc/nginx/
 COPY ./src/common/nginx/pam_nginx /etc/pam.d/nginx
 RUN rpm -ivh /tmp/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm && \
     rm -f /tmp/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm && \
+    mkdir /etc/pki/nginx/ && \
     groupadd -g 42 shadow && \
     chgrp shadow /etc/gshadow && \
     chgrp shadow /etc/shadow && \
