--- a/kubernetes/statefulset-with-ingress-and-volume-full/02-statefulset.yaml
+++ b/kubernetes/statefulset-with-ingress-and-volume-full/02-statefulset.yaml
@@ -80,13 +80,28 @@ spec:
       containers:
       - name: centos-xfce-ja-volume-full
         image: tmatsuo/centos-xfce-ja
-        readinessProbe:
-          httpGet:
-            path: /term/
-            port: 8080
-          httpGet:
-            path: /desktop/
-            port: 8080
+        livenessProbe:
+          exec:
+            command:
+            - "curl"
+            - "-s"
+            - "-f"
+            - "--insecure"
+            - "-o"
+            - "/dev/null"
+            - "http://127.0.0.1:8080/desktop/vnc_lite.html"
+            - "&&"
+            - curl
+            - "-s"
+            - "-f"
+            - "--insecure"
+            - "-o"
+            - "/dev/null"
+            - "http://127.0.0.1:8080/term/static/main.css"
+          initialDelaySeconds: 10
+          failureThreshold: 3
+          periodSeconds: 20
+          timeoutSeconds: 5
         env:
         - name: PASSWORD
           value: password
@@ -94,6 +109,8 @@ spec:
           value: "8080"
         - name: VNC_RESOLUTION
           value: "1800x850"
+        - name: NOSSL
+          value: "true"
         volumeMounts:
         - name: centos-xfce-ja-volume-full
           mountPath: "/volume"
