mount /dev/shm because firefox and chrome crash

--- a/kubernetes/statefulset-with-ingress-and-volume-full/02-statefulset.yaml
+++ b/kubernetes/statefulset-with-ingress-and-volume-full/02-statefulset.yaml
@@ -141,8 +141,12 @@ spec:
         - name: centos-xfce-ja-volume-full
           subPath: "headless"
           mountPath: "/headless"
+        - name: shm
+          mountPath: "/dev/shm"
       volumes:
       - name: centos-xfce-ja-volume-full
         persistentVolumeClaim:
           claimName: centos-xfce-ja-volume-full
-
+      - name: shm
+        emptyDir:
+          medium: Memory
