--- a/kubernetes/statefulset-with-lb/01-statefulset.yaml
+++ b/kubernetes/statefulset-with-lb/01-statefulset.yaml
@@ -46,4 +46,13 @@ spec:
           value: "8080"
         - name: VNC_RESOLUTION
           value: "1800x850"
+        - name: NOSSL
+          value: "true"
+        volumeMounts:
+        - name: shm
+          mountPath: "/dev/shm"
+      volumes:
+      - name: shm
+        emptyDir:
+          medium: Memory
 
