--- a/kubernetes/statefulset-with-ingress-and-volume/02-statefulset.yaml
+++ b/kubernetes/statefulset-with-ingress-and-volume/02-statefulset.yaml
@@ -56,6 +56,8 @@ spec:
           value: "1800x850"
         - name: NOSSL
           value: "true"
+        - name: shm
+          mountPath: "/dev/shm"
         volumeMounts:
         - name: centos-xfce-ja
           mountPath: "/root"
@@ -63,4 +65,6 @@ spec:
       - name: centos-xfce-ja
         persistentVolumeClaim:
           claimName: centos-xfce-ja
-
+      - name: shm
+        emptyDir:
+          medium: Memory
