--- a/kubernetes/statefulset-with-ingress/01-statefulset.yaml
+++ b/kubernetes/statefulset-with-ingress/01-statefulset.yaml
@@ -48,4 +48,11 @@ spec:
           value: "1800x850"
         - name: NOSSL
           value: "true"
+        volumeMounts:
+        - name: shm
+          mountPath: "/dev/shm"
+      volumes:
+      - name: shm
+        emptyDir:
+          medium: Memory
 
