refactor Dockerfile (step2)

--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -1,14 +1,10 @@
-# This Dockerfile is used to build an headles vnc image based on Centos
-
 FROM tmatsuo/centos:7
-ENV REFRESHED_AT 2020-08-29
 LABEL maintainer="matsuo.tak@gmail.com"
 
 ### Envrionment config
 ENV HOME=/root \
     TERM=xterm \
     STARTUPDIR=/dockerstartup \
-    INST_SCRIPTS=/headless/install \
     NO_VNC_HOME=/headless/noVNC \
     VNC_COL_DEPTH=24 \
     VNC_RESOLUTION=1800x850 \
@@ -20,14 +16,36 @@ ENV HOME=/root \
 
 WORKDIR $HOME
 
-# yum and pip install
-RUN yum install -y ibus-kkc fcitx fcitx-configtool fcitx-anthy ipa-*-fonts python2-pip.noarch python-tornado.x86_64 supervisor firefox xorg-x11-server-Xorg nginx psmisc openssh-server && \
+# Install packages
+RUN yum install -y epel-release && \
+    wget https://dl.bintray.com/tigervnc/stable/tigervnc-el7.repo -O /etc/yum.repos.d/tigervnc.repo && \
+    yum install -y ibus-kkc fcitx fcitx-configtool fcitx-anthy ipa-*-fonts python2-pip.noarch python-tornado.x86_64 supervisor firefox xorg-x11-server-Xorg nginx psmisc openssh-clients openssh-server vim sudo wget which net-tools bzip2 numpy mailcap bash-completion bash-completion-extras tigervnc-server nss_wrapper gettext chromium chromium-libs chromium-libs-media && \
+    echo "###### install xfce ######" && \
+    yum -y -x gnome-keyring --skip-broken groups install "Xfce" && \
+    yum -y groups install "Fonts" && \
+    yum erase -y *power* *screensaver* && \
+    rm /etc/xdg/autostart/xfce-polkit* && \
+    /bin/dbus-uuidgen > /etc/machine-id && \
+    echo "source $STARTUPDIR/generate_container_user" >> $HOME/.bashrc && \
+    echo "###### install butterfly ######" && \
+    pip install --upgrade pip && \
     pip install butterfly && \
+    echo "###### install vnc ######" && \
+    mkdir -p $NO_VNC_HOME/utils/websockify && \
+    wget -qO- https://github.com/novnc/noVNC/archive/v1.2.0.tar.gz | tar xz --strip 1 -C $NO_VNC_HOME && \
+    wget -qO- https://github.com/novnc/websockify/archive/v0.9.0.tar.gz | tar xz --strip 1 -C $NO_VNC_HOME/utils/websockify && \
+    chmod +x -v $NO_VNC_HOME/utils/*.sh && \
+    ln -s $NO_VNC_HOME/vnc.html $NO_VNC_HOME/index.html && \
+    echo "###### install filebrowser ######" && \
+    curl -fsSL https://filebrowser.org/get.sh | bash && \
+    mkdir /var/lib/filebrowser && \
+    echo "###### set locale ######" && \
+    localedef -f UTF-8 -i ja_JP ja_JP.UTF-8 && \
+    echo "###### cleanup ######" && \
+    rm -rf $HOME/.cache/pip/* && \
     yum clean all
 
 ### ADD and COPY files
-ADD ./src/common/install/ $INST_SCRIPTS/
-ADD ./src/centos/install/ $INST_SCRIPTS/
 ADD ./src/common/xfce/ $HOME/
 ADD ./src/common/scripts $STARTUPDIR
 COPY ./src/common/nginx/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm /tmp/
@@ -40,28 +58,8 @@ COPY ./src/common/supervisor/*.ini /etc/supervisord.d/
 COPY ./src/common/scripts/sshd_startup.sh /dockerstartup/sshd_startup.sh
 COPY ./src/common/supervisor/docker-entrypoint.sh /
 
-### Add +x permission
-RUN find $INST_SCRIPTS -name '*.sh' -exec chmod a+x {} +
-
-### Install some common tools
-RUN $INST_SCRIPTS/tools.sh
-RUN localedef -f UTF-8 -i ja_JP ja_JP.UTF-8
-
-### Install xvnc-server & noVNC - HTML5 based VNC viewer
-RUN $INST_SCRIPTS/tigervnc.sh
-RUN $INST_SCRIPTS/no_vnc.sh
-
-### Install startup
-RUN $INST_SCRIPTS/libnss_wrapper.sh
-
-### Install Chrome browser
-RUN $INST_SCRIPTS/chrome.sh
-
-### Install xfce UI
-RUN $INST_SCRIPTS/xfce_ui.sh
-
-### Setting Nginx
-RUN rpm -ivh /tmp/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm && \
+RUN echo "###### install nginx pam auth module ######" && \
+    rpm -ivh /tmp/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm && \
     rm -f /tmp/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm && \
     mkdir /etc/pki/nginx/ && \
     groupadd -g 42 shadow && \
@@ -73,21 +71,21 @@ RUN rpm -ivh /tmp/nginx-module-auth-pam-1.5.2-1.el7.x86_64.rpm && \
     chmod 2755 /usr/bin/chage && \
     chmod 640 /etc/shadow && \
     chmod 640 /etc/gshadow && \
-    gpasswd -a nginx shadow
+    gpasswd -a nginx shadow && \
+    echo "###### setup login message ######" && \
+    echo -e "## CentOS 7 Web Console ##\n\n" > /etc/motd && \
+    echo 'echo -e "\n################################################\nPlease change root password using passwd command.\n################################################\n"' >> $HOME/.bashrc && \
+    echo "###### setup supervisord ######" && \
+    sed -i "s/nodaemon=false/nodaemon=true/g" /etc/supervisord.conf && \
+    echo "###### change permissions for $STARTUPDIR and $HOME ######" && \
+    find $STARTUPDIR/ -name '*.sh' -exec chmod $verbose a+x {} + && \
+    find $STARTUPDIR/ -name '*.desktop' -exec chmod $verbose a+x {} + && \
+    chgrp -R 0 $STARTUPDIR && chmod -R $verbose a+rw $STARTUPDIR && find $STARTUPDIR -type d -exec chmod $verbose a+x {} + && \
+    find $HOME/ -name '*.sh' -exec chmod $verbose a+x {} + && \
+    find $HOME/ -name '*.desktop' -exec chmod $verbose a+x {} + && \
+    chgrp -R 0 $HOME && chmod -R $verbose a+rw $HOME && find $HOME -type d -exec chmod $verbose a+x {} +
 
-### Setup supervisor and butterfly
-RUN echo -e "## CentOS 7 Web Console ##\n\n" > /etc/motd && \
-    sed -i "s/nodaemon=false/nodaemon=true/g" /etc/supervisord.conf
-
-### Install filebrowser
-RUN curl -fsSL https://filebrowser.org/get.sh | bash && \
-    mkdir /var/lib/filebrowser
-
-### configure startup
-RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
-RUN echo 'echo -e "\n################################################\nPlease change root password using passwd command.\n################################################\n"' >> $HOME/.bashrc
-
-### pach. https://github.com/novnc/noVNC/pull/1451
+### Pach. https://github.com/novnc/noVNC/pull/1451
 COPY ./src/common/novnc/vnc.html $NO_VNC_HOME/vnc.html
 COPY ./src/common/nginx/launch.sh $NO_VNC_HOME/utils/launch.sh
 
