--- a/src/common/xfce/Desktop/chromium-browser.desktop
+++ b/src/common/xfce/Desktop/chromium-browser.desktop
@@ -167,7 +167,7 @@ Comment[vi]=Truy cập Internet
 Comment[zh_CN]=访问互联网
 Comment[zh_HK]=連線到網際網路
 Comment[zh_TW]=連線到網際網路
-Exec=chromium-browser %U
+Exec=chromium-browser %U --no-sandbox --start-maximized --user-data-dir
 Terminal=false
 X-MultipleArgs=false
 Type=Application
