change sample manifest directries

--- a/kubernetes/statefulset-persistent/pvc.yaml
+++ b/kubernetes/statefulset-persistent/pvc.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: centos-xfce-ja-volume-full
+  name: centos-xfce-ja
 spec:
   accessModes:
   - ReadWriteOnce
