--- a/kubernetes/service-and-ingress/service.yaml
+++ b/kubernetes/service-and-ingress/service.yaml
@@ -6,11 +6,14 @@ metadata:
 spec:
   selector:
     app: centos-xfce-ja
-  type: LoadBalancer
   ports:
-  - name: https
+  - name: http
     protocol: TCP
-    port: 443
+    port: 80
     targetPort: 8080
-
-
+  - name: ssh
+    port: 22
+    targetPort: 22
+  - name: rdp
+    port: 3389
+    targetPort: 3389
