--- a/kubernetes/statefulset-persistent/statefulset.yaml
+++ b/kubernetes/statefulset-persistent/statefulset.yaml
@@ -2,23 +2,23 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: centos-xfce-ja-volume-full
+  name: centos-xfce-ja
 spec:
-  serviceName: centos-xfce-ja-volume-full
+  serviceName: centos-xfce-ja
   selector:
     matchLabels:
-      app: centos-xfce-ja-volume-full
+      app: centos-xfce-ja
   replicas: 1
   template:
     metadata:
       labels:
-        app: centos-xfce-ja-volume-full
+        app: centos-xfce-ja
     spec:
       initContainers:
-      - name: centos-xfce-init
+      - name: init
         image: tmatsuo/centos-xfce-ja
         volumeMounts:
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           mountPath: /volume
         command: ["/bin/bash", "-c"]
         args:
@@ -78,7 +78,7 @@ spec:
           fi;
           "
       containers:
-      - name: centos-xfce-ja-volume-full
+      - name: centos
         image: tmatsuo/centos-xfce-ja
         livenessProbe:
           exec:
@@ -111,42 +111,52 @@ spec:
           value: "1800x850"
         - name: NOSSL
           value: "true"
+        - name: DISABLE_DESKTOP
+          value: "false"
+        - name: DISABLE_TERMINAL
+          value: "false"
+        - name: DISABLE_FILER
+          value: "false"
+        - name: DISABLE_SSH
+          value: "false"
+        - name: DISABLE_RDP
+          value: "false"
         volumeMounts:
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           mountPath: "/volume"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "root"
           mountPath: "/root"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "usr"
           mountPath: "/usr"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "etc"
           mountPath: "/etc"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "var"
           mountPath: "/var"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "run"
           mountPath: "/run"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "home"
           mountPath: "/home"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "opt"
           mountPath: "/opt"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "srv"
           mountPath: "/srv"
-        - name: centos-xfce-ja-volume-full
+        - name: centos-xfce-ja
           subPath: "headless"
           mountPath: "/headless"
         - name: shm
           mountPath: "/dev/shm"
       volumes:
-      - name: centos-xfce-ja-volume-full
+      - name: centos-xfce-ja
         persistentVolumeClaim:
-          claimName: centos-xfce-ja-volume-full
+          claimName: centos-xfce-ja
       - name: shm
         emptyDir:
           medium: Memory
