--- a/src/common/supervisor/butterfly.ini
+++ b/src/common/supervisor/butterfly.ini
@@ -1,5 +1,5 @@
 [program:butterfly]
-command=/usr/bin/butterfly.server.py --host=127.0.0.1 --port=57575 --unsecure --login --motd=/etc/motd %(ENV_BUTTERFLY_OPTSOPTS)s
+command=/usr/bin/butterfly.server.py --host=127.0.0.1 --port=57575 --unsecure --login --motd=/etc/motd %(ENV_BUTTERFLY_OPTS)s
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
