support non root user

--- a/src/common/supervisor/xrdp-sesman.ini
+++ b/src/common/supervisor/xrdp-sesman.ini
@@ -1,5 +1,5 @@
-[program:xrdp]
-command=/usr/sbin/xrdp --nodaemon
+[program:xrdp-sesman]
+command=/usr/sbin/xrdp-sesman --nodaemon
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
