--- a/Dockerfile.vscode
+++ b/Dockerfile.vscode
@@ -59,10 +59,7 @@ RUN echo "###### install nginx pam auth module ######" && \
     echo "###### setup supervisord ######" && \
     sed -i "s/nodaemon=false/nodaemon=true/g" /etc/supervisord.conf && \
     echo "###### change permissions for $STARTUPDIR and $HOME ######" && \
-    find $STARTUPDIR/ -name '*.sh' -exec chmod $verbose a+x {} + && \
-    chgrp -R 0 $STARTUPDIR && chmod -R $verbose a+rw $STARTUPDIR && find $STARTUPDIR -type d -exec chmod $verbose a+x {} + && \
-    find $HOME/ -name '*.sh' -exec chmod $verbose a+x {} + && \
-    chgrp -R 0 $HOME && chmod -R $verbose a+rw $HOME && find $HOME -type d -exec chmod $verbose a+x {} +
+    chown root:root $HOME && chmod 750 $HOME && find $HOME -type d -exec chmod 750 {} +
 
 USER 0
 ENTRYPOINT ["/docker-entrypoint.sh"]
